fix work on safari

--- a/spa-herbareyou-vegimo/src/assets/css/common.css
+++ b/spa-herbareyou-vegimo/src/assets/css/common.css
@@ -934,7 +934,7 @@ nav.is-open {
   }
 }
 .footer {
-  margin: 0rem auto 5rem;
+  margin: 5rem auto 5rem;
   text-align: center;
 }
 
