--- a/spa-herbareyou-vegimo/src/assets/css/detail.css
+++ b/spa-herbareyou-vegimo/src/assets/css/detail.css
@@ -111,10 +111,12 @@
 }
 
 .detail-container__dd {
+  -webkit-text-size-adjust: none;
   cursor: pointer;
 }
 
 .detail-container-hd2__sub {
+  -webkit-text-size-adjust: none;
   display: block;
   font-size: 1.5rem;
   font-weight: bold;
@@ -122,6 +124,7 @@
 }
 
 .detail-container-hd2__title {
+  -webkit-text-size-adjust: none;
   display: block;
   font-size: 2rem;
   font-weight: bold;
